--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.github.wonsunahn</groupId>
-  <artifactId>cs1632-cicd-junit</artifactId>
+  <artifactId>cs1632-cicd-junit-mac577</artifactId>
   <version>1.0</version>
   <packaging>jar</packaging>
 
@@ -33,13 +33,13 @@
     <url>http://github.com/wonsunahn/CS1632_CICD_JUnit/tree/master</url>
    </scm>
   
-   <distributionManagement>
+  <distributionManagement>
     <repository>
-      <id>github</id>
+     <id>github</id>
       <name>GitHub Apache Maven Packages</name>
-      <url>https://maven.pkg.github.com/CS1632/supplementary-exercise-4-ci-cd-junit-wonsunahn</url>
+      <url>https://github.com/CS1632/supplementary-exercise-4-ci-cd-junit-mikecox579</url>
     </repository>
-  </distributionManagement>
+   </distributionManagement>
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
